--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
         <a-asset-item id="table" src="assets/models/table/table.dae"></a-asset-item>
+        <a-asset-item id="table" src="assets/models/table/table.glb"></a-asset-item>
         <a-asset-item id="chair" src="assets/models/Chair/model.dae"></a-asset-item>
         <a-asset-item id="speaker" src="assets/models/speaker/model.dae"></a-asset-item>
         <a-asset-item id="couch" src="assets/models/couch/model.dae"></a-asset-item>
@@ -251,6 +252,27 @@ transparent:true; src: #glass; repeat: 40 35"></a-entity>
     <a-collada-model id="bedroom" scale="0.7 0.7 0.7" src="#bedroom" rotation="0 180 0" position="-22 -0.5 20.5"></a-collada-model>
     <a-collada-model id="bed" scale="0.025 0.025 0.035" src="#bed" rotation="0 180 0" position="-36 -0.5 27.5"></a-collada-model>
 
+
+
+    <!--Banner-->
+
+    <!-- Banners -->
+    <a-entity geometry="primitive: plane; height: 7; width: 1.5" position="0 7.5 26" rotation="0 90 0" material="shader: flat; side: double; transparent: true;
+src: #banner">
+        <a-entity geometry="primitive: cylinder; radius: 0.1; height: 4" position="-0.9 3.5 0" rotation="0 0 90"
+                  material="
+src: #torch"></a-entity>
+    </a-entity>
+
+    <!-- Welcome -->
+    <a-entity geometry="primitive: plane; height: 6.9; width: 10" position="0 9.2 -1" rotation="0 0 0" material="shader: flat; side: double; transparent: true;
+src: url(images/welcome.png)">
+        <a-entity geometry="primitive: plane; height: 6.9; width: 10" position="0 0 -0.01" rotation="0 180 0" material="shader: flat; side: double; transparent: true;
+src: url(images/welcome-back.png)"></a-entity>
+        <a-entity geometry="primitive: cylinder; radius: 0.2; height: 11" position="0 3.5 0" rotation="90 90 0"
+                  material="
+src: #torch"></a-entity>
+    </a-entity>
 </a-scene>
 </body>
 </html>
